preparado para crear el pipe de filtro

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,5 +1,5 @@
 <div class="contenedor">
-    <button>inventario</button>
+    <button [routerLink]="['/inventario']">inventario</button>
     <button>historial</button>
 </div>
 
