--- a/src/app/inventario/inventario.component.html
+++ b/src/app/inventario/inventario.component.html
@@ -1,6 +1,6 @@
 <div class="contenedor">
 <div class="busqueda">
-    barra de busqueda 
+     <barra-busqueda></barra-busqueda>
 </div>
 <table>
     <thead>
@@ -10,8 +10,21 @@
             <th>medida</th>
             <th>espesor</th>
             <th>stock</th>
+            <th>sector/es</th>
         </tr>
     </thead>
+    <tbody>
+        @for (placa of placas; track $index) {
+            <tr>
+                <td>{{placa.nombre}}</td>
+                <td>{{placa.material}}</td>
+                <td>{{placa.alto}}<br> x <br>{{placa.ancho}}</td>
+                <td>{{placa.espesor}}</td>
+                <td>{{placa.stock}}</td>
+                <td>{{placa.sector}}</td>
+            </tr>
+        }
+    </tbody>
 </table>
 
 
