--- a/src/app/inventario/inventario.component.scss
+++ b/src/app/inventario/inventario.component.scss
@@ -2,3 +2,13 @@
     display: flex;
     flex-direction: column;
 }
+table {
+    max-width: 100vw;
+    border-collapse: collapse; /* Une los bordes de las celdas */
+  }
+  
+  td, th {
+    border: 1px dashed black; /* Todos los bordes de las celdas serán de 1px, sólidos y negros */
+    padding: 3px; 
+    text-align: center;
+  }
